fixed mobile view to not have overflow

--- a/resources/scss/index.scss
+++ b/resources/scss/index.scss
@@ -104,24 +104,21 @@ nav {
     border-bottom-width: thin;
     border-bottom-color: #403D39;
   }
+  .state-flag{
+    border-radius: 20px;
+  }
+  .mobile-sf-container{
+    padding-left: 0;
+  }
   .Todo{
     background-color:#FF6B6B;
-    border-radius: 20px;
-    padding: 1px 40px 1px 10px;
-    margin-left: 50%;
   }
   .InProgress{
     background-color: #FFE66D;
-    border-radius: 20px;
-    padding: 1px 65px 1px 10px;
-    margin-left: 50%;
   }
 
   .Done{
     background-color: #4ECDC4;
-    border-radius: 20px;
-    padding: 1px 40px 1px 10px;
-    margin-left: 50%;;
   }
   p{
     margin-top: 0;
